package edu.hitsz.prop;

public interface PropFactory {
    
    BaseProp createProp();
}
